traces/scikit-learn__scikit-learn-10949/repair_log.txt
2026-02-11 08:09:22,131 - INFO - Starting test generation for scikit-learn__scikit-learn-10949 using SWT-bench containers
2026-02-11 08:09:22,131 - INFO - Detected language: python
2026-02-11 08:09:22,131 - INFO - Using Docker mode (runtime setup) for scikit-learn__scikit-learn-10949
2026-02-11 08:09:22,157 - INFO - Found local registry image: ghcr.io/mistralai/exec.env.x86_64.437918b9cd24690e5e9c56:latest
2026-02-11 08:09:22,157 - INFO - Pulling from registry: ghcr.io/mistralai/exec.env.x86_64.437918b9cd24690e5e9c56:latest
2026-02-11 08:09:22,856 - INFO - Successfully pulled: ghcr.io/mistralai/exec.env.x86_64.437918b9cd24690e5e9c56:latest
2026-02-11 08:09:22,857 - INFO - Starting container (attempt 1/5): swt-jie.zhang-scikit-learn__scikit-8165b8
2026-02-11 08:09:23,139 - INFO - Container started: 5700742a3debf13a989b1d261f9f7733a465a02798b7d0a2a3ac1f72d0ff6075
2026-02-11 08:09:23,139 - INFO - Running repo setup at runtime...
2026-02-11 08:11:31,448 - ERROR - Error during repo setup: 404 Client Error for http://docker-service:2375/v1.53/exec/89325502d745e1e7b81197e3da7fabd7bb763e121a1b6de4da9edfae4326bfcf/json: Not Found ("No such exec instance: 89325502d745e1e7b81197e3da7fabd7bb763e121a1b6de4da9edfae4326bfcf")
2026-02-11 08:11:31,448 - WARNING - Container start attempt 1 failed: Failed to run repo setup
2026-02-11 08:11:33,451 - INFO - Starting container (attempt 2/5): swt-jie.zhang-scikit-learn__scikit-ae73b1
2026-02-11 08:11:33,456 - WARNING - Image was garbage collected, re-pulling: ghcr.io/mistralai/exec.env.x86_64.437918b9cd24690e5e9c56:latest
2026-02-11 08:11:55,576 - INFO - Re-pulled image: ghcr.io/mistralai/exec.env.x86_64.437918b9cd24690e5e9c56:latest
2026-02-11 08:11:55,992 - INFO - Container started: 9962750ff45aff7399059fb8f6aa5a945d55c9db20f98553d9a230f69ed5fe79
2026-02-11 08:11:55,992 - INFO - Running repo setup at runtime...
2026-02-11 08:11:56,120 - ERROR - Error during repo setup: 404 Client Error for http://docker-service:2375/v1.53/exec/ada97255159547627667e4dc64b3bdbd7f920ef66d6a40f82ae154639fbeb91b/json: Not Found ("No such exec instance: ada97255159547627667e4dc64b3bdbd7f920ef66d6a40f82ae154639fbeb91b")
2026-02-11 08:11:56,120 - WARNING - Container start attempt 2 failed: Failed to run repo setup
2026-02-11 08:12:00,123 - INFO - Starting container (attempt 3/5): swt-jie.zhang-scikit-learn__scikit-163b16
2026-02-11 08:12:00,128 - WARNING - Image was garbage collected, re-pulling: ghcr.io/mistralai/exec.env.x86_64.437918b9cd24690e5e9c56:latest
2026-02-11 08:12:28,499 - INFO - Re-pulled image: ghcr.io/mistralai/exec.env.x86_64.437918b9cd24690e5e9c56:latest
2026-02-11 08:12:29,133 - INFO - Container started: a0b3ef80c346f00808dee14b0faa6332cc0cd1a0f37a556dbd114ff75a4233e4
2026-02-11 08:12:29,133 - INFO - Running repo setup at runtime...
2026-02-11 08:12:29,180 - ERROR - Error during repo setup: 404 Client Error for http://docker-service:2375/v1.53/exec/7e7ea92efa4fa8812b04144cabf4be1ce48433b5698b323b46aba0798a2b62e6/json: Not Found ("No such exec instance: 7e7ea92efa4fa8812b04144cabf4be1ce48433b5698b323b46aba0798a2b62e6")
2026-02-11 08:12:29,180 - WARNING - Container start attempt 3 failed: Failed to run repo setup
2026-02-11 08:12:35,184 - INFO - Starting container (attempt 4/5): swt-jie.zhang-scikit-learn__scikit-e58074
2026-02-11 08:12:35,723 - INFO - Container started: 64eadde810f2aa5a1ab1a0bb1fc39e489c5feee6d433c2985264928b0fb47b54
2026-02-11 08:12:35,723 - INFO - Running repo setup at runtime...
2026-02-11 08:12:35,852 - ERROR - Error during repo setup: 404 Client Error for http://docker-service:2375/v1.53/exec/472211c90ec1b1a3fa21c82a81e9b46e1ee33773a0738e7be85205e41d5adbf4/json: Not Found ("No such exec instance: 472211c90ec1b1a3fa21c82a81e9b46e1ee33773a0738e7be85205e41d5adbf4")
2026-02-11 08:12:35,853 - WARNING - Container start attempt 4 failed: Failed to run repo setup
2026-02-11 08:12:43,856 - INFO - Starting container (attempt 5/5): swt-jie.zhang-scikit-learn__scikit-240fab
2026-02-11 08:12:44,778 - INFO - Container started: c6ae2a4da97a060c529df621d356aa9ae2a72009d4f5382ef7dd7ee11ade3e54
2026-02-11 08:12:44,778 - INFO - Running repo setup at runtime...
2026-02-11 08:12:44,891 - ERROR - Error during repo setup: 404 Client Error for http://docker-service:2375/v1.53/exec/cef2993ff04f3ad3dc2a3b3446a88bf4aad08c2c00f4f9e47c5988992943d4d4/json: Not Found ("No such exec instance: cef2993ff04f3ad3dc2a3b3446a88bf4aad08c2c00f4f9e47c5988992943d4d4")
2026-02-11 08:12:44,891 - WARNING - Container start attempt 5 failed: Failed to run repo setup
2026-02-11 08:12:44,894 - ERROR - Failed to start container: Failed to start container after 5 attempts: Failed to run repo setup
2026-02-11 11:38:53,978 - INFO - Starting test generation for scikit-learn__scikit-learn-10949 using SWT-bench containers
2026-02-11 11:38:53,979 - INFO - Detected language: python
2026-02-11 11:38:53,979 - INFO - Using Docker mode (runtime setup) for scikit-learn__scikit-learn-10949
2026-02-11 11:38:54,009 - INFO - Found local registry image: ghcr.io/mistralai/exec.env.x86_64.437918b9cd24690e5e9c56:latest
2026-02-11 11:38:54,009 - INFO - Pulling from registry: ghcr.io/mistralai/exec.env.x86_64.437918b9cd24690e5e9c56:latest
2026-02-11 11:38:54,758 - INFO - Successfully pulled: ghcr.io/mistralai/exec.env.x86_64.437918b9cd24690e5e9c56:latest
2026-02-11 11:38:54,759 - INFO - Starting container (attempt 1/5): swt-jie.zhang-scikit-learn__scikit-60ec9c
2026-02-11 11:38:55,115 - INFO - Container started: b11950e33b9dc24e871f8680ef38ea09f2b1af0d6d3535edc168fe4cf35ed3de
2026-02-11 11:38:55,115 - INFO - Running repo setup at runtime...
2026-02-11 11:42:28,637 - INFO - Repo setup completed successfully
2026-02-11 11:42:28,638 - INFO - === GENERATION PHASE ===
2026-02-11 11:42:28,638 - INFO - === GENERATION PHASE ===
2026-02-11 11:42:55,348 - INFO - Generation completed
2026-02-11 11:42:56,302 - INFO - Found test file at: /testbed/test_reproduce.py
2026-02-11 11:42:56,303 - INFO - === VALIDATION + REPAIR LOOP ===
2026-02-11 11:42:56,983 - INFO - Using run command: cd /testbed && pip install -e . -q 2>/dev/null; python test_reproduce.py...
2026-02-11 11:42:56,983 - INFO - Validation attempt 1/4
2026-02-11 11:44:42,702 - ERROR - F->P verification FAILED: Test FAILS on head commit (should PASS)
2026-02-11 11:44:42,702 - ERROR -   Head commit exit code: 1
2026-02-11 11:44:42,702 - ERROR -   Head commit output (first 500 chars):   File "test_reproduce.py", line 1
    \"\"\"Test to reproduce the issue with warn_on_dtype and DataFrame\"\"\"
                                                                           ^
SyntaxError: unexpected character after line continuation character

2026-02-11 11:44:42,702 - INFO - Validation failed: FAILS_ON_HEAD
2026-02-11 11:44:42,702 - INFO - Requesting repair attempt 1
2026-02-11 11:44:48,759 - INFO - Repair step 1: got write_file with 1308 chars
2026-02-11 11:44:48,759 - INFO - Extracted repaired test (1308 chars) after 1 steps
2026-02-11 11:44:48,759 - INFO - Got repaired test, will re-validate
2026-02-11 11:44:48,759 - INFO - Validation attempt 2/4
2026-02-11 11:48:17,202 - INFO - F->P verification PASSED: base_exit=1, head_exit=0
2026-02-11 11:48:17,202 - INFO - Validation PASSED!
2026-02-11 11:48:17,225 - INFO - Attempting to stop container swt-jie.zhang-scikit-learn__scikit-60ec9c...
2026-02-11 11:48:32,859 - INFO - Attempting to remove container swt-jie.zhang-scikit-learn__scikit-60ec9c...
2026-02-11 11:48:33,067 - INFO - Container swt-jie.zhang-scikit-learn__scikit-60ec9c removed.
